build-files/panaroo/1.6.0/README.md
# Panaroo Container

Main tool : [Panaroo](https://github.com/gtonkinhill/panaroo)

<details>
<summary>Additional tools installed via micromamba:</summary> 

```
  Name                       Version       Build                  Channel    
───────────────────────────────────────────────────────────────────────────────
  _openmp_mutex              4.5           3_kmp_llvm             conda-forge
  alsa-lib                   1.2.14        hb9d3cd8_0             conda-forge
  aragorn                    1.2.41        h7b50bb2_5             bioconda   
  argcomplete                3.6.2         pyhd8ed1ab_0           conda-forge
  argh                       0.31.3        pyhd8ed1ab_1           conda-forge
  arpack                     3.9.1         nompi_hf03ea27_102     conda-forge
  barrnap                    0.9           hdfd78af_4             bioconda   
  bedtools                   2.31.1        h13024bc_3             bioconda   
  biocode                    0.12.0        pyhdfd78af_0           bioconda   
  biopython                  1.85          py39h8cd3c5a_1         conda-forge
  blast                      2.16.0        h66d330f_5             bioconda   
  brotli                     1.1.0         hb9d3cd8_2             conda-forge
  brotli-bin                 1.1.0         hb9d3cd8_2             conda-forge
  brotli-python              1.1.0         py39hf88036b_2         conda-forge
  bzip2                      1.0.8         h4bc722e_7             conda-forge
  c-ares                     1.34.5        hb9d3cd8_0             conda-forge
  ca-certificates            2025.4.26     hbd8a1cb_0             conda-forge
  cairo                      1.18.4        h3394656_0             conda-forge
  capnproto                  1.0.2         h766bdaa_3             conda-forge
  cd-hit                     4.8.1         h5ca1c30_13            bioconda   
  certifi                    2025.4.26     pyhd8ed1ab_0           conda-forge
  cffi                       1.17.1        py39h15c3d72_0         conda-forge
  charset-normalizer         3.4.2         pyhd8ed1ab_0           conda-forge
  colorama                   0.4.6         pyhd8ed1ab_1           conda-forge
  contourpy                  1.3.0         py39h74842e3_2         conda-forge
  curl                       8.13.0        h332b0f4_0             conda-forge
  cycler                     0.12.1        pyhd8ed1ab_1           conda-forge
  dendropy                   5.0.6         pyhdfd78af_0           bioconda   
  entrez-direct              22.4          he881be0_0             bioconda   
  expat                      2.7.0         h5888daf_0             conda-forge
  font-ttf-dejavu-sans-mono  2.37          hab24e00_0             conda-forge
  font-ttf-inconsolata       3.000         h77eed37_0             conda-forge
  font-ttf-source-code-pro   2.038         h77eed37_0             conda-forge
  font-ttf-ubuntu            0.83          h77eed37_3             conda-forge
  fontconfig                 2.15.0        h7e30c49_1             conda-forge
  fonts-conda-ecosystem      1             0                      conda-forge
  fonts-conda-forge          1             0                      conda-forge
  fonttools                  4.57.0        py39h9399b63_0         conda-forge
  freetype                   2.13.3        ha770c72_1             conda-forge
  gawk                       5.3.1         hcd3d067_0             conda-forge
  gffutils                   0.13          pyh7cba7a3_0           bioconda   
  giflib                     5.2.2         hd590300_0             conda-forge
  glpk                       5.0           h445213a_0             conda-forge
  gmp                        6.3.0         hac33072_2             conda-forge
  graphite2                  1.3.13        h59595ed_1003          conda-forge
  gsl                        2.7           he838d99_0             conda-forge
  h2                         4.2.0         pyhd8ed1ab_0           conda-forge
  harfbuzz                   11.1.0        h3beb420_0             conda-forge
  hmmer                      3.4           hb6cb901_4             bioconda   
  hpack                      4.1.0         pyhd8ed1ab_0           conda-forge
  hyperframe                 6.1.0         pyhd8ed1ab_0           conda-forge
  icu                        75.1          he02047a_0             conda-forge
  idna                       3.10          pyhd8ed1ab_1           conda-forge
  importlib-metadata         8.6.1         pyha770c72_0           conda-forge
  importlib-resources        6.5.2         pyhd8ed1ab_0           conda-forge
  importlib_resources        6.5.2         pyhd8ed1ab_0           conda-forge
  infernal                   1.1.4         h779adbc_0             bioconda   
  intbitset                  3.0.2         py39hd1e30aa_1         conda-forge
  jinja2                     3.1.6         pyhd8ed1ab_0           conda-forge
  joblib                     1.5.0         pyhd8ed1ab_0           conda-forge
  keyutils                   1.6.1         h166bdaf_0             conda-forge
  kiwisolver                 1.4.7         py39h74842e3_0         conda-forge
  krb5                       1.21.3        h659f571_0             conda-forge
  lcms2                      2.17          h717163a_0             conda-forge
  ld_impl_linux-64           2.43          h712a8e2_4             conda-forge
  lerc                       4.0.0         h0aef613_1             conda-forge
  libasprintf                0.24.1        h8e693c7_0             conda-forge
  libblas                    3.9.0         31_h59b9bed_openblas   conda-forge
  libbrotlicommon            1.1.0         hb9d3cd8_2             conda-forge
  libbrotlidec               1.1.0         hb9d3cd8_2             conda-forge
  libbrotlienc               1.1.0         hb9d3cd8_2             conda-forge
  libcblas                   3.9.0         31_he106b2a_openblas   conda-forge
  libcups                    2.3.3         h4637d8d_4             conda-forge
  libcurl                    8.13.0        h332b0f4_0             conda-forge
  libdeflate                 1.23          h86f0d12_0             conda-forge
  libedit                    3.1.20250104  pl5321h7949ede_0       conda-forge
  libev                      4.33          hd590300_2             conda-forge
  libexpat                   2.7.0         h5888daf_0             conda-forge
  libffi                     3.4.6         h2dba641_1             conda-forge
  libfreetype                2.13.3        ha770c72_1             conda-forge
  libfreetype6               2.13.3        h48d6fc4_1             conda-forge
  libgcc                     14.2.0        h767d61c_2             conda-forge
  libgcc-ng                  14.2.0        h69a702a_2             conda-forge
  libgettextpo               0.24.1        h5888daf_0             conda-forge
  libgfortran                14.2.0        h69a702a_2             conda-forge
  libgfortran-ng             14.2.0        h69a702a_2             conda-forge
  libgfortran5               14.2.0        hf1ad2bd_2             conda-forge
  libglib                    2.84.1        h3618099_1             conda-forge
  libgomp                    14.2.0        h767d61c_2             conda-forge
  libhwloc                   2.11.2        default_h0d58e46_1001  conda-forge
  libiconv                   1.18          h4ce23a2_1             conda-forge
  libidn11                   1.34          h1cef754_0             conda-forge
  libidn2                    2.3.8         ha4ef2c3_0             conda-forge
  libjpeg-turbo              3.1.0         hb9d3cd8_0             conda-forge
  liblapack                  3.9.0         31_h7ac8fdf_openblas   conda-forge
  libllvm14                  14.0.6        hcd5def8_4             conda-forge
  liblzma                    5.8.1         hb9d3cd8_1             conda-forge
  libnghttp2                 1.64.0        h161d5f1_0             conda-forge
  libnsl                     2.0.1         hd590300_0             conda-forge
  libopenblas                0.3.29        pthreads_h94d23a6_0    conda-forge
  libpng                     1.6.47        h943b412_0             conda-forge
  libsqlite                  3.49.1        hee588c1_2             conda-forge
  libssh2                    1.11.1        hcf80075_0             conda-forge
  libstdcxx                  14.2.0        h8f9b012_2             conda-forge
  libstdcxx-ng               14.2.0        h4852527_2             conda-forge
  libtiff                    4.7.0         hd9ff511_4             conda-forge
  libunistring               0.9.10        h7f98852_0             conda-forge
  libuuid                    2.38.1        h0b41bf4_0             conda-forge
  libwebp-base               1.5.0         h851e524_0             conda-forge
  libxcb                     1.17.0        h8a09558_0             conda-forge
  libxcrypt                  4.4.36        hd590300_1             conda-forge
  libxml2                    2.13.7        h4bc477f_1             conda-forge
  libzlib                    1.3.1         hb9d3cd8_2             conda-forge
  llvm-openmp                20.1.4        h024ca30_0             conda-forge
  llvmlite                   0.43.0        py39hf8b6b1a_1         conda-forge
  mafft                      7.526         h4bc722e_0             conda-forge
  markupsafe                 3.0.2         py39h9399b63_1         conda-forge
  mash                       2.3           hb105d93_9             bioconda   
  matplotlib-base            3.9.4         py39h16632d1_0         conda-forge
  minced                     0.4.2         hdfd78af_1             bioconda   
  mkl                        2024.2.2      ha957f24_16            conda-forge
  mpfr                       4.2.1         h90cbb55_3             conda-forge
  mpi                        1.0           openmpi                conda-forge
  munkres                    1.1.4         pyh9f0ad1d_0           conda-forge
  narwhals                   1.38.0        pyhe01879c_0           conda-forge
  ncbi-vdb                   3.2.1         h9948957_0             bioconda   
  ncurses                    6.5           h2d0b736_3             conda-forge
  networkx                   3.2.1         pyhd8ed1ab_0           conda-forge
  numba                      0.60.0        py39h0320e7d_0         conda-forge
  numpy                      2.0.2         py39h9cb892a_1         conda-forge
  openjdk                    23.0.2        h53dfc1b_2             conda-forge
  openjpeg                   2.5.3         h5fbd93e_0             conda-forge
  openmpi                    4.1.6         hc5af2df_101           conda-forge
  openssl                    3.5.0         h7b32b05_1             conda-forge
  packaging                  25.0          pyh29332c3_1           conda-forge
  panaroo                    1.5.2         pyhdfd78af_0           bioconda   
  parallel                   20250422      ha770c72_0             conda-forge
  pcre2                      10.45         hc749103_0             conda-forge
  peewee                     3.18.1        py39hf036d5e_0         conda-forge
  perl                       5.22.2.1      0                      conda-forge
  perl-archive-tar           2.18          1                      bioconda   
  perl-bioperl               1.6.924       4                      bioconda   
  perl-common-sense          3.74          0                      bioconda   
  perl-exporter-tiny         0.042         1                      bioconda   
  perl-json                  2.90          1                      bioconda   
  perl-json-xs               2.34          0                      bioconda   
  perl-list-moreutils        0.413         1                      bioconda   
  perl-threaded              5.32.1        hdfd78af_1             bioconda   
  perl-xml-namespacesupport  1.11          0                      bioconda   
  perl-xml-parser            2.44          3                      bioconda   
  perl-xml-sax               0.99          0                      bioconda   
  perl-xml-sax-base          1.08          0                      bioconda   
  perl-xml-sax-expat         0.51          0                      bioconda   
  perl-xml-simple            2.22          0                      bioconda   
  perl-yaml                  1.24          pl522_1                bioconda   
  pillow                     11.1.0        py39h15c0740_0         conda-forge
  pip                        25.1.1        pyh8b19718_0           conda-forge
  pixman                     0.46.0        h29eaf8c_0             conda-forge
  plotly                     6.0.1         pyhd8ed1ab_0           conda-forge
  prank                      170427        h9948957_1             bioconda   
  prodigal                   2.6.3         h7b50bb2_10            bioconda   
  prokka                     1.13          2                      bioconda   
  pthread-stubs              0.4           hb9d3cd8_1002          conda-forge
  pycparser                  2.22          pyh29332c3_1           conda-forge
  pyfaidx                    0.8.1.4       pyhdfd78af_0           bioconda   
  pyparsing                  3.2.3         pyhd8ed1ab_1           conda-forge
  pysocks                    1.7.1         pyha55dd90_7           conda-forge
  python                     3.9.22        h85ef794_1_cpython     conda-forge
  python-dateutil            2.9.0.post0   pyhff2d567_1           conda-forge
  python-edlib               1.3.9.post1   py39h2de1943_2         bioconda   
  python-igraph              0.11.8        py39hb479397_0         conda-forge
  python_abi                 3.9           7_cp39                 conda-forge
  pyvcf3                     1.0.3         pyhdfd78af_0           bioconda   
  qhull                      2020.2        h434a139_5             conda-forge
  readline                   8.2           h8c095d6_2             conda-forge
  requests                   2.32.3        pyhd8ed1ab_1           conda-forge
  rpsbproc                   0.5.0         hd6d6fdc_3             bioconda   
  scikit-learn               1.6.1         py39h4b7350c_0         conda-forge
  scipy                      1.13.1        py39haf93ffa_0         conda-forge
  setuptools                 80.1.0        pyhff2d567_0           conda-forge
  simplejson                 3.20.1        py39h8cd3c5a_0         conda-forge
  six                        1.17.0        pyhd8ed1ab_0           conda-forge
  taxadb                     0.12.1        pyh5e36f6f_0           bioconda   
  tbb                        2021.13.0     hceb3a55_1             conda-forge
  tbl2asn                    25.7          h9ee0642_1             bioconda   
  texttable                  1.7.0         pyhd8ed1ab_1           conda-forge
  threadpoolctl              3.6.0         pyhecae5ae_0           conda-forge
  tk                         8.6.13        noxft_h4845f30_101     conda-forge
  tqdm                       4.67.1        pyhd8ed1ab_1           conda-forge
  tzdata                     2025b         h78e105d_0             conda-forge
  unicodedata2               16.0.0        py39h8cd3c5a_0         conda-forge
  urllib3                    2.4.0         pyhd8ed1ab_0           conda-forge
  wget                       1.21.4        hda4d442_0             conda-forge
  wheel                      0.45.1        pyhd8ed1ab_1           conda-forge
  xorg-libice                1.1.2         hb9d3cd8_0             conda-forge
  xorg-libsm                 1.2.6         he73a12e_0             conda-forge
  xorg-libx11                1.8.12        h4f16b4b_0             conda-forge
  xorg-libxau                1.0.12        hb9d3cd8_0             conda-forge
  xorg-libxdmcp              1.1.5         hb9d3cd8_0             conda-forge
  xorg-libxext               1.3.6         hb9d3cd8_0             conda-forge
  xorg-libxfixes             6.0.1         hb9d3cd8_0             conda-forge
  xorg-libxi                 1.8.2         hb9d3cd8_0             conda-forge
  xorg-libxrandr             1.5.4         hb9d3cd8_0             conda-forge
  xorg-libxrender            0.9.12        hb9d3cd8_0             conda-forge
  xorg-libxt                 1.3.1         hb9d3cd8_0             conda-forge
  xorg-libxtst               1.2.5         hb9d3cd8_3             conda-forge
  zipp                       3.21.0        pyhd8ed1ab_1           conda-forge
  zlib                       1.3.1         hb9d3cd8_2             conda-forge
  zstandard                  0.23.0        py39h8cd3c5a_2         conda-forge
  zstd                       1.5.7         hb8e6e7a_2             conda-forge```
</details>
</br>


Full documentation: https://gtonkinhill.github.io/panaroo/#/

Panaroo is an updated pipeline for pangenome investigation.

[Tonkin-Hill G, MacAlasdair N, Ruis C, Weimann A, Horesh G, Lees JA, Gladstone RA, Lo S, Beaudoin C, Floto RA, Frost SDW, Corander J, Bentley SD, Parkhill J. 2020. Producing polished prokaryotic pangenomes with the Panaroo pipeline. Genome Biol 21:180.](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02090-4)


## Example Usage

```bash
# Using GFFs in the same format as output by Prokka run:
mkdir results
panaroo -i *.gff -o results --clean-mode strict
```
