build-files/panaroo/1.7.0/README.md
# Panaroo Container

Main tool : [Panaroo](https://github.com/gtonkinhill/panaroo)

<details>
<summary>Additional tools installed via micromamba:</summary> 

```
List of packages in environment: "/opt/conda"

  Name                                   Version        Build                 Channel    
───────────────────────────────────────────────────────────────────────────────────────────
  _openmp_mutex                          4.5            20_gnu                conda-forge
  alsa-lib                               1.2.16         hb03c661_1            conda-forge
  any2fasta                              0.8.1          hdfd78af_0            bioconda   
  aragorn                                1.2.41         h7b50bb2_5            bioconda   
  archspec                               0.2.5          pyhd8ed1ab_0          conda-forge
  argcomplete                            3.6.2          pyhd8ed1ab_0          conda-forge
  argh                                   0.31.3         pyhd8ed1ab_1          conda-forge
  argtable2                              2.13           hd590300_1004         conda-forge
  aria2                                  1.37.0         h4e1c2bf_3            conda-forge
  arpack                                 3.9.1          nompi_hf03ea27_102    conda-forge
  barrnap                                1.10.6         pl5321hdfd78af_0      bioconda   
  bedtools                               2.31.1         h13024bc_3            bioconda   
  biocode                                0.12.1         pyhdfd78af_0          bioconda   
  biopython                              1.85           py39h8cd3c5a_1        conda-forge
  blast                                  2.17.0         h66d330f_0            bioconda   
  blast-legacy                           2.2.26         hf7ff83a_5            bioconda   
  brotli                                 1.2.0          hed03a55_1            conda-forge
  brotli-bin                             1.2.0          hb03c661_1            conda-forge
  brotli-python                          1.0.9          py39h5a03fae_8        conda-forge
  bzip2                                  1.0.8          hda65f42_9            conda-forge
  c-ares                                 1.34.6         hb03c661_0            conda-forge
  ca-certificates                        2026.5.20      hbd8a1cb_0            conda-forge
  cairo                                  1.18.4         h3394656_0            conda-forge
  capnproto                              1.0.2          h766bdaa_3            conda-forge
  cd-hit                                 4.8.1          h5ca1c30_13           bioconda   
  certifi                                2025.8.3       pyhd8ed1ab_0          conda-forge
  cffi                                   1.17.1         py39h15c3d72_0        conda-forge
  charset-normalizer                     3.4.3          pyhd8ed1ab_0          conda-forge
  clustalo                               1.2.4          h503566f_10           bioconda   
  clustalw                               2.1            h9948957_12           bioconda   
  colorama                               0.4.6          pyhd8ed1ab_1          conda-forge
  contourpy                              1.3.0          py39h74842e3_2        conda-forge
  curl                                   8.20.0         hcf29cc6_0            conda-forge
  cycler                                 0.12.1         pyhd8ed1ab_1          conda-forge
  dendropy                               5.0.8          pyhdfd78af_1          bioconda   
  diamond                                2.2.1          he361c42_0            bioconda   
  entrez-direct                          24.0           he881be0_0            bioconda   
  expat                                  2.8.1          hecca717_1            conda-forge
  font-ttf-dejavu-sans-mono              2.37           hab24e00_0            conda-forge
  font-ttf-inconsolata                   3.000          h77eed37_0            conda-forge
  font-ttf-source-code-pro               2.038          h77eed37_0            conda-forge
  font-ttf-ubuntu                        0.83           h77eed37_3            conda-forge
  fontconfig                             2.18.1         h27c8c51_0            conda-forge
  fonts-conda-ecosystem                  1              0                     conda-forge
  fonts-conda-forge                      1              hc364b38_1            conda-forge
  fonttools                              4.59.1         py39heb7d2ae_0        conda-forge
  freetype                               2.14.3         ha770c72_0            conda-forge
  gawk                                   5.4.0          h0a3468a_0            conda-forge
  gffutils                               0.14           pyh106432d_0          bioconda   
  giflib                                 5.2.2          hd590300_0            conda-forge
  glpk                                   5.0            h445213a_0            conda-forge
  gmp                                    6.3.0          hac33072_2            conda-forge
  gnutls                                 3.8.13         h18acefa_0            conda-forge
  graphite2                              1.3.15         hecca717_0            conda-forge
  gsl                                    2.8            hbf7d49c_1            conda-forge
  gzip                                   1.14           hb9d3cd8_0            conda-forge
  h2                                     4.2.0          pyhd8ed1ab_0          conda-forge
  harfbuzz                               12.2.0         h15599e2_0            conda-forge
  hmmer                                  3.4            h503566f_3            bioconda   
  hpack                                  4.1.0          pyhd8ed1ab_0          conda-forge
  hyperframe                             6.1.0          pyhd8ed1ab_0          conda-forge
  icu                                    75.1           he02047a_0            conda-forge
  idna                                   3.11           pyhf9edf01_1          conda-forge
  importlib-metadata                     8.7.0          pyhe01879c_1          conda-forge
  importlib-resources                    6.5.2          pyhd8ed1ab_0          conda-forge
  importlib_resources                    6.5.2          pyhd8ed1ab_0          conda-forge
  infernal                               1.1.5          pl5321h7b50bb2_4      bioconda   
  intbitset                              3.0.2          py39hd1e30aa_1        conda-forge
  jinja2                                 3.1.6          pyhd8ed1ab_0          conda-forge
  joblib                                 1.5.1          pyhd8ed1ab_0          conda-forge
  keyutils                               1.6.3          hb9d3cd8_0            conda-forge
  kiwisolver                             1.4.7          py39h74842e3_0        conda-forge
  krb5                                   1.22.2         ha1258a1_0            conda-forge
  lcms2                                  2.19.1         h0c24ade_1            conda-forge
  ld_impl_linux-64                       2.45.1         default_hbd61a6d_102  conda-forge
  lerc                                   4.1.0          hdb68285_0            conda-forge
  libasprintf                            0.25.1         h3f43e3d_1            conda-forge
  libblas                                3.11.0         8_h4a7cf45_openblas   conda-forge
  libbrotlicommon                        1.2.0          hb03c661_1            conda-forge
  libbrotlidec                           1.2.0          hb03c661_1            conda-forge
  libbrotlienc                           1.2.0          hb03c661_1            conda-forge
  libcblas                               3.11.0         8_h0358290_openblas   conda-forge
  libcups                                2.3.3          h7a8fb5f_6            conda-forge
  libcurl                                8.20.0         hcf29cc6_0            conda-forge
  libdb                                  6.2.32         h9c3ff4c_0            conda-forge
  libdeflate                             1.25           h17f619e_0            conda-forge
  libedit                                3.1.20250104   pl5321h7949ede_0      conda-forge
  libev                                  4.33           hd590300_2            conda-forge
  libexpat                               2.8.1          hecca717_1            conda-forge
  libffi                                 3.5.2          h3435931_0            conda-forge
  libfreetype                            2.14.3         ha770c72_0            conda-forge
  libfreetype6                           2.14.3         h73754d4_0            conda-forge
  libgcc                                 15.2.0         he0feb66_19           conda-forge
  libgcc-ng                              15.2.0         h69a702a_19           conda-forge
  libgettextpo                           0.25.1         h3f43e3d_1            conda-forge
  libgfortran                            15.2.0         h69a702a_19           conda-forge
  libgfortran-ng                         15.2.0         h69a702a_19           conda-forge
  libgfortran5                           15.2.0         h68bc16d_19           conda-forge
  libglib                                2.88.1         h0d30a3d_2            conda-forge
  libgomp                                15.2.0         he0feb66_19           conda-forge
  libiconv                               1.18           h3b78370_2            conda-forge
  libidn11                               1.34           h1cef754_0            conda-forge
  libidn2                                2.3.8          hfac485b_1            conda-forge
  libjpeg-turbo                          3.1.4.1        hb03c661_0            conda-forge
  liblapack                              3.11.0         8_h47877c9_openblas   conda-forge
  libllvm14                              14.0.6         hcd5def8_4            conda-forge
  liblzma                                5.8.3          hb03c661_0            conda-forge
  liblzma-devel                          5.8.3          hb03c661_0            conda-forge
  libnghttp2                             1.68.1         h877daf1_0            conda-forge
  libnsl                                 2.0.1          hb9d3cd8_1            conda-forge
  libopenblas                            0.3.33         pthreads_h94d23a6_0   conda-forge
  libpng                                 1.6.58         h421ea60_0            conda-forge
  libsqlite                              3.53.2         h0c1763c_0            conda-forge
  libssh2                                1.11.1         hcf80075_0            conda-forge
  libstdcxx                              15.2.0         h934c35e_19           conda-forge
  libstdcxx-ng                           15.2.0         hdf11a46_19           conda-forge
  libtasn1                               4.21.0         hb03c661_0            conda-forge
  libtiff                                4.7.1          h9d88235_1            conda-forge
  libunistring                           0.9.10         h7f98852_0            conda-forge
  libuuid                                2.42.1         h5347b49_0            conda-forge
  libwebp-base                           1.6.0          hd42ef1d_0            conda-forge
  libxcb                                 1.17.0         h8a09558_0            conda-forge
  libxcrypt                              4.4.36         hd590300_1            conda-forge
  libxml2                                2.13.9         h04c0eec_0            conda-forge
  libzlib                                1.3.2          h25fd6f3_2            conda-forge
  llvmlite                               0.43.0         py39hf8b6b1a_1        conda-forge
  mafft                                  7.526          h4bc722e_0            conda-forge
  make                                   4.4.1          hb9d3cd8_2            conda-forge
  markupsafe                             3.0.2          py39h9399b63_1        conda-forge
  mash                                   2.3            hb105d93_10           bioconda   
  matplotlib-base                        3.9.4          py39h16632d1_0        conda-forge
  minced                                 0.4.2          hdfd78af_1            bioconda   
  mmseqs2                                18.8cc5c       hd6d6fdc_0            bioconda   
  mpfr                                   4.2.2          he0a73b1_0            conda-forge
  munkres                                1.1.4          pyhd8ed1ab_1          conda-forge
  muscle                                 5.3            h9948957_3            bioconda   
  narwhals                               2.1.2          pyhe01879c_0          conda-forge
  ncbi-vdb                               3.4.1          hd63eeec_0            bioconda   
  ncurses                                6.6            hdb14827_0            conda-forge
  nettle                                 3.10.1         h4a9d5aa_0            conda-forge
  networkx                               3.2.1          pyhd8ed1ab_0          conda-forge
  numba                                  0.60.0         py39h0320e7d_0        conda-forge
  numpy                                  2.0.2          py39h9cb892a_1        conda-forge
  openjdk                                25.0.1         h5755bd7_0            conda-forge
  openjpeg                               2.5.4          h55fea9a_0            conda-forge
  openssl                                3.6.3          h35e630c_0            conda-forge
  p11-kit                                0.26.2         h3435931_0            conda-forge
  packaging                              26.2           pyhc364b38_0          conda-forge
  paml                                   4.10.10        h87e0c26_2            bioconda   
  panaroo                                1.7.0          pyhdfd78af_0          bioconda   
  parallel                               20260422       ha770c72_0            conda-forge
  pcre2                                  10.47          haa7fec5_0            conda-forge
  peewee                                 3.18.2         py39hf036d5e_0        conda-forge
  perl                                   5.32.1         7_hd590300_perl5      conda-forge
  perl-algorithm-diff                    1.201          pl5321hd8ed1ab_0      conda-forge
  perl-archive-tar                       3.12           pl5321hdfd78af_0      bioconda   
  perl-b-cow                             0.007          pl5321hb9d3cd8_1      conda-forge
  perl-base                              2.23           pl5321hd8ed1ab_0      conda-forge
  perl-bio-asn1-entrezgene               1.73           pl5321hdfd78af_3      bioconda   
  perl-bio-coordinate                    1.007001       pl5321hdfd78af_3      bioconda   
  perl-bio-featureio                     1.6.905        pl5321hdfd78af_4      bioconda   
  perl-bio-samtools                      1.43           pl5321h577a1d6_6      bioconda   
  perl-bio-searchio-hmmer                1.7.3          pl5321hdfd78af_0      bioconda   
  perl-bio-tools-phylo-paml              1.7.3          pl5321hdfd78af_3      bioconda   
  perl-bio-tools-run-alignment-clustalw  1.7.4          pl5321hdfd78af_3      bioconda   
  perl-bio-tools-run-alignment-tcoffee   1.7.4          pl5321hdfd78af_5      bioconda   
  perl-bioperl                           1.7.8          hdfd78af_1            bioconda   
  perl-bioperl-core                      1.7.8          pl5321hdfd78af_1      bioconda   
  perl-bioperl-run                       1.007003       pl5321hdfd78af_0      bioconda   
  perl-business-isbn                     3.007          pl5321hd8ed1ab_0      conda-forge
  perl-business-isbn-data                20210112.006   pl5321hd8ed1ab_0      conda-forge
  perl-carp                              1.50           pl5321hd8ed1ab_0      conda-forge
  perl-class-data-inheritable            0.09           pl5321ha770c72_0      conda-forge
  perl-clone                             0.46           pl5321hb9d3cd8_1      conda-forge
  perl-common-sense                      3.75           pl5321hd8ed1ab_0      conda-forge
  perl-compress-raw-bzip2                2.214          pl5321hda65f42_0      conda-forge
  perl-compress-raw-zlib                 2.214          pl5321h4dac143_0      conda-forge
  perl-constant                          1.33           pl5321hd8ed1ab_0      conda-forge
  perl-data-dump                         1.25           pl5321h7b50bb2_2      bioconda   
  perl-data-dumper                       2.183          pl5321hb9d3cd8_1      conda-forge
  perl-db_file                           1.858          pl5321hb9d3cd8_0      conda-forge
  perl-devel-stacktrace                  2.04           pl5321h296ab09_0      conda-forge
  perl-digest-hmac                       1.05           pl5321hdfd78af_0      bioconda   
  perl-digest-md5                        2.59           pl5321hb9d3cd8_3      conda-forge
  perl-encode                            3.24           pl5321hb03c661_0      conda-forge
  perl-encode-locale                     1.05           pl5321hdfd78af_7      bioconda   
  perl-exception-class                   1.45           pl5321ha770c72_0      conda-forge
  perl-exporter                          5.74           pl5321hd8ed1ab_0      conda-forge
  perl-exporter-tiny                     1.002002       pl5321hd8ed1ab_0      conda-forge
  perl-extutils-makemaker                7.70           pl5321hd8ed1ab_0      conda-forge
  perl-file-listing                      6.16           pl5321hdfd78af_0      bioconda   
  perl-file-path                         2.18           pl5321hd8ed1ab_0      conda-forge
  perl-file-slurper                      0.014          pl5321hdfd78af_0      bioconda   
  perl-file-sort                         1.01           pl5321hdfd78af_3      bioconda   
  perl-file-spec                         3.48_01        pl5321hdfd78af_2      bioconda   
  perl-file-temp                         0.2304         pl5321hd8ed1ab_0      conda-forge
  perl-file-which                        1.24           pl5321hd8ed1ab_0      conda-forge
  perl-getopt-long                       2.58           pl5321hdfd78af_0      bioconda   
  perl-html-parser                       3.81           pl5321h4ac6f70_1      bioconda   
  perl-html-tagset                       3.24           pl5321hdfd78af_0      bioconda   
  perl-http-cookiejar-lwp                0.014          pl5321hdfd78af_0      bioconda   
  perl-http-cookies                      6.11           pl5321hdfd78af_0      bioconda   
  perl-http-daemon                       6.17           pl5321hdfd78af_0      bioconda   
  perl-http-date                         6.06           pl5321hdfd78af_0      bioconda   
  perl-http-message                      7.02           pl5321hdfd78af_0      bioconda   
  perl-http-negotiate                    6.01           pl5321hdfd78af_4      bioconda   
  perl-inc-latest                        0.500          pl5321ha770c72_0      conda-forge
  perl-io-compress                       2.216          pl5321h503566f_0      bioconda   
  perl-io-html                           1.004          pl5321hdfd78af_0      bioconda   
  perl-io-socket-ssl                     2.075          pl5321hd8ed1ab_0      conda-forge
  perl-io-string                         1.08           pl5321hdfd78af_4      bioconda   
  perl-io-tty                            1.31           pl5321hb03c661_0      conda-forge
  perl-io-zlib                           1.15           pl5321hdfd78af_1      bioconda   
  perl-ipc-run                           20250809.0     pl5321hdfd78af_0      bioconda   
  perl-json                              4.11           pl5321hdfd78af_0      bioconda   
  perl-json-xs                           4.04           pl5321h9948957_0      bioconda   
  perl-libwww-perl                       6.82           pl5321hdfd78af_0      bioconda   
  perl-libxml-perl                       0.08           pl5321hdfd78af_3      bioconda   
  perl-list-moreutils                    0.430          pl5321hdfd78af_0      bioconda   
  perl-list-moreutils-xs                 0.430          pl5321h7b50bb2_5      bioconda   
  perl-lwp-mediatypes                    6.04           pl5321hdfd78af_1      bioconda   
  perl-lwp-protocol-https                6.15           pl5321hdfd78af_0      bioconda   
  perl-mime-base64                       3.16           pl5321hb9d3cd8_3      conda-forge
  perl-module-build                      0.4234         pl5321ha770c72_1      conda-forge
  perl-module-load                       0.34           pl5321hdfd78af_0      bioconda   
  perl-mozilla-ca                        20250602       pl5321hdfd78af_0      bioconda   
  perl-net-http                          6.24           pl5321hdfd78af_0      bioconda   
  perl-net-ssleay                        1.96           pl5321h34fdc24_0      conda-forge
  perl-ntlm                              1.09           pl5321hdfd78af_5      bioconda   
  perl-parent                            0.243          pl5321hd8ed1ab_0      conda-forge
  perl-path-tiny                         0.150          pl5321hd8ed1ab_0      conda-forge
  perl-pathtools                         3.75           pl5321hb9d3cd8_2      conda-forge
  perl-scalar-list-utils                 1.70           pl5321hb03c661_0      conda-forge
  perl-socket                            2.027          pl5321h5c03b87_6      bioconda   
  perl-storable                          3.15           pl5321hb9d3cd8_2      conda-forge
  perl-sub-uplevel                       0.2800         pl5321hb9d3cd8_0      conda-forge
  perl-test-deep                         1.130          pl5321hd8ed1ab_0      conda-forge
  perl-test-differences                  0.72           pl5321ha770c72_0      conda-forge
  perl-test-exception                    0.43           pl5321hd8ed1ab_0      conda-forge
  perl-test-fatal                        0.016          pl5321hdfd78af_0      bioconda   
  perl-test-most                         0.42           pl5321hdfd78af_0      bioconda   
  perl-test-needs                        0.002009       pl5321hd8ed1ab_0      conda-forge
  perl-test-requiresinternet             0.05           pl5321hdfd78af_1      bioconda   
  perl-test-warn                         0.37           pl5321hd8ed1ab_0      conda-forge
  perl-test-warnings                     0.031          pl5321ha770c72_0      conda-forge
  perl-text-diff                         1.45           pl5321hd8ed1ab_0      conda-forge
  perl-time-local                        1.35           pl5321hdfd78af_0      bioconda   
  perl-timedate                          2.35           pl5321hdfd78af_0      bioconda   
  perl-tree-dag_node                     1.35           pl5321hdfd78af_0      bioconda   
  perl-try-tiny                          0.32           pl5321ha770c72_1      conda-forge
  perl-types-serialiser                  1.01           pl5321hdfd78af_0      bioconda   
  perl-uri                               5.34           pl5321ha770c72_0      conda-forge
  perl-url-encode                        0.03           pl5321h9ee0642_1      bioconda   
  perl-www-robotrules                    6.03           pl5321hdfd78af_0      bioconda   
  perl-xml-dom                           1.46           pl5321hdfd78af_1      bioconda   
  perl-xml-dom-xpath                     0.14           pl5321hdfd78af_2      bioconda   
  perl-xml-namespacesupport              1.12           pl5321hd8ed1ab_0      conda-forge
  perl-xml-parser                        2.44_01        pl5321hf2e2c51_1004   conda-forge
  perl-xml-regexp                        0.04           pl5321hdfd78af_3      bioconda   
  perl-xml-sax                           1.02           pl5321hd8ed1ab_0      conda-forge
  perl-xml-sax-base                      1.09           pl5321hd8ed1ab_0      conda-forge
  perl-xml-sax-expat                     0.51           pl5321hd8ed1ab_0      conda-forge
  perl-xml-simple                        2.25           pl5321hdfd78af_2      bioconda   
  perl-xml-xpathengine                   0.14           pl5321hdfd78af_3      bioconda   
  pillow                                 11.3.0         py39h15c0740_0        conda-forge
  pip                                    25.2           pyh8b19718_0          conda-forge
  pixman                                 0.46.4         h54a6638_1            conda-forge
  plotly                                 6.3.0          pyhd8ed1ab_0          conda-forge
  poa                                    2.0            h7b50bb2_6            bioconda   
  prank                                  251117         hd63eeec_0            bioconda   
  prodigal                               2.6.3          h577a1d6_11           bioconda   
  prokka                                 1.15.6         pl5321hdfd78af_0      bioconda   
  pthread-stubs                          0.4            hb9d3cd8_1002         conda-forge
  pycparser                              2.22           pyh29332c3_1          conda-forge
  pyfaidx                                0.9.0.4        pyhdfd78af_0          bioconda   
  pyparsing                              3.2.3          pyhe01879c_2          conda-forge
  pyrodigal                              3.7.0          py39hbcbf7aa_0        bioconda   
  pysocks                                1.7.1          pyha55dd90_7          conda-forge
  python                                 3.9.23         hc30ae73_0_cpython    conda-forge
  python-dateutil                        2.9.0.post0    pyhe01879c_2          conda-forge
  python-edlib                           1.3.9.post1    py39h2de1943_2        bioconda   
  python-igraph                          0.11.9         py39h3b801fc_0        conda-forge
  python_abi                             3.9            8_cp39                conda-forge
  pyvcf3                                 1.0.4          py39hbcbf7aa_0        bioconda   
  qhull                                  2020.2         h434a139_5            conda-forge
  readline                               8.3            h853b02a_0            conda-forge
  requests                               2.32.5         pyhd8ed1ab_0          conda-forge
  samtools                               0.1.19         h9dcdb79_15           bioconda   
  scikit-learn                           1.6.1          py39h4b7350c_0        conda-forge
  scipy                                  1.13.1         py39haf93ffa_0        conda-forge
  seqkit                                 2.13.0         he881be0_0            bioconda   
  setuptools                             80.9.0         pyhff2d567_0          conda-forge
  simplejson                             3.20.1         py39h8cd3c5a_0        conda-forge
  six                                    1.17.0         pyhe01879c_1          conda-forge
  t-coffee                               12.00.7fb08c2  h26a2512_0            bioconda   
  taxadb                                 0.12.1         pyh5e36f6f_0          bioconda   
  taxonkit                               0.20.0         h9ee0642_1            bioconda   
  tbl2asn-forever                        25.7.2f        h7b50bb2_6            bioconda   
  texttable                              1.7.0          pyhd8ed1ab_1          conda-forge
  threadpoolctl                          3.6.0          pyhecae5ae_0          conda-forge
  tk                                     8.6.13         noxft_h366c992_103    conda-forge
  tqdm                                   4.67.1         pyhd8ed1ab_1          conda-forge
  transtermhp                            2.09           h9948957_2            bioconda   
  tzdata                                 2025c          hc9c84f9_1            conda-forge
  unicodedata2                           16.0.0         py39h8cd3c5a_0        conda-forge
  unzip                                  6.0            hb03c661_4            conda-forge
  urllib3                                2.5.0          pyhd8ed1ab_0          conda-forge
  viennarna                              2.6.4          py39pl5321heaaa4ec_2  bioconda   
  wget                                   1.25.0         h653f8fd_1            conda-forge
  wheel                                  0.45.1         pyhd8ed1ab_1          conda-forge
  xorg-libice                            1.1.2          hb9d3cd8_0            conda-forge
  xorg-libsm                             1.2.6          he73a12e_0            conda-forge
  xorg-libx11                            1.8.13         he1eb515_0            conda-forge
  xorg-libxau                            1.0.12         hb03c661_1            conda-forge
  xorg-libxdmcp                          1.1.5          hb03c661_1            conda-forge
  xorg-libxext                           1.3.7          hb03c661_0            conda-forge
  xorg-libxfixes                         6.0.2          hb03c661_0            conda-forge
  xorg-libxi                             1.8.3          hb03c661_0            conda-forge
  xorg-libxrandr                         1.5.5          hb03c661_0            conda-forge
  xorg-libxrender                        0.9.12         hb9d3cd8_0            conda-forge
  xorg-libxt                             1.3.1          hb9d3cd8_0            conda-forge
  xorg-libxtst                           1.2.5          hb9d3cd8_3            conda-forge
  xz                                     5.8.3          ha02ee65_0            conda-forge
  xz-gpl-tools                           5.8.3          ha02ee65_0            conda-forge
  xz-tools                               5.8.3          hb03c661_0            conda-forge
  ziggypep                               0.3.1          hdfd78af_0            bioconda   
  zipp                                   3.23.0         pyhd8ed1ab_0          conda-forge
  zlib                                   1.3.2          h25fd6f3_2            conda-forge
  zstandard                              0.23.0         py39hd399759_3        conda-forge
  zstd                                   1.5.7          hb78ec9c_6            conda-forge
```
</details>
</br>


Full documentation: https://gtonkinhill.github.io/panaroo/#/

Panaroo is an updated pipeline for pangenome investigation.

[Tonkin-Hill G, MacAlasdair N, Ruis C, Weimann A, Horesh G, Lees JA, Gladstone RA, Lo S, Beaudoin C, Floto RA, Frost SDW, Corander J, Bentley SD, Parkhill J. 2020. Producing polished prokaryotic pangenomes with the Panaroo pipeline. Genome Biol 21:180.](https://genomebiology.biomedcentral.com/articles/10.1186/s13059-020-02090-4)


## Example Usage

```bash
# Using GFFs in the same format as output by Prokka run:
mkdir results
panaroo -i *.gff -o results --clean-mode strict
```
